Began work on ML-based simulations

--- a/swarmulator.ipynb
+++ b/swarmulator.ipynb
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1436,19 +1436,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[50, 276], [53, 318]]\n",
-      "745 210\n",
-      "[[366, 103], [541, 421], [637, 506], [637, 505], [527, 515], [583, 204], [249, 68], [546, 259], [525, 498], [441, 346], [369, 101], [273, 328], [330, 431], [576, 115], [358, 420], [276, 371], [523, 95], [291, 380], [335, 353], [434, 447], [423, 304], [489, 437], [478, 508], [448, 260], [636, 198], [321, 330], [455, 521], [539, 235], [576, 503], [326, 115], [533, 180], [444, 456], [508, 186], [597, 68], [624, 103], [393, 475], [381, 534], [538, 203], [618, 201], [401, 361], [340, 299], [359, 408], [300, 178], [313, 338], [398, 94], [628, 295], [416, 52], [342, 414], [361, 352], [492, 358], [476, 457], [292, 114], [348, 533], [367, 533], [448, 379], [492, 208], [422, 223], [623, 225], [300, 385], [507, 436], [356, 440], [609, 183], [271, 363], [449, 106], [529, 438], [344, 471], [385, 490], [272, 496], [596, 439], [382, 502], [380, 491], [330, 442], [396, 416], [321, 222], [460, 483], [567, 275], [396, 478], [625, 390], [580, 202], [315, 136], [286, 405], [477, 349], [354, 293], [299, 137], [452, 36], [435, 284], [614, 55], [484, 528], [596, 59], [369, 215], [240, 95], [579, 254], [345, 166], [445, 455], [469, 336], [518, 314], [445, 420], [280, 440], [585, 136], [617, 97]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Same 2 drone set up as previously, but now with some funkier obstacles\n",
     "\n",
@@ -1492,7 +1482,7 @@
     "obstacles = pygame.sprite.Group()\n",
     "oinits = []\n",
     "\n",
-    "for i in range(100):\n",
+    "for i in range(75):\n",
     "    y = np.random.randint(50,550)\n",
     "    x = np.random.randint(250,650)\n",
     "    ydim = np.random.randint(10,30)\n",
@@ -1530,11 +1520,11 @@
     "\n",
     "counter = 1\n",
     "\n",
-    "#screen.fill((0,0,0))\n",
-    "#for entity in allsprites:\n",
-    "#    screen.blit(entity.surf, entity.rect)\n",
-    "#pygame.display.flip()\n",
-    "#pygame.time.wait(10000)\n",
+    "screen.fill((0,0,0))\n",
+    "for entity in allsprites:\n",
+    "    screen.blit(entity.surf, entity.rect)\n",
+    "pygame.display.flip()\n",
+    "pygame.time.wait(10000)\n",
     "\n",
     "while running:\n",
     "    # Can force exit the simulation using ESC or by closing the window\n",
@@ -1722,14 +1712,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2909, 2898, 2893, 2882, 2870, 2858, 2846, 2834, 2822, 2810, 2798, 2786, 2774, 2766, 2758, 2744, 2738, 2732, 2725, 2717, 2714, 2707, 2697, 2687, 2679, 2674, 2667, 1708, 1396, 1141, 928, 915, 908, 795, 647, 636, 621, 607, 596, 584, 570, 561, 554, 542, 534, 529, 522, 510, 505, 494, 479, 464, 449, 434, 424, 416, 406, 398, 387, 375, 361, 350, 339, 327, 312, 297, 282, 267, 252, 237, 222, 207, 192, 177, 162, 147, 132, 117, 102, 87, 72, 57, 42, 27, 11, 0]\n"
+      "[1172, 1157, 1142, 1127, 1112, 1097, 1082, 1067, 1056, 1045, 1034, 1026, 1015, 1009, 1001, 995, 976, 948, 943, 935, 928, 918, 911, 891, 885, 879, 863, 829, 822, 805, 791, 776, 761, 746, 731, 716, 701, 686, 671, 656, 641, 626, 611, 596, 581, 566, 551, 536, 521, 506, 491, 481, 469, 453, 442, 433, 428, 356, 347, 340, 333, 323, 293, 282, 267, 252, 237, 222, 207, 192, 177, 162, 147, 132, 117, 102, 87, 72, 57, 42, 27, 11, 0]\n"
      ]
     }
    ],
@@ -1750,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1828,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1849,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1873,7 +1863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1896,18 +1886,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[48, 254], [75, 290], [69, 327]]\n",
-      "745 282\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 3 drones?!?!\n",
     "\n",
@@ -1927,6 +1908,10 @@
     "d1 = Drone_NSEW(1,np.random.randint(50,100),np.random.randint(250,270),0)\n",
     "d2 = Drone_NSEW(1,np.random.randint(50,100),np.random.randint(290,310),0)\n",
     "d3 = Drone_NSEW(1,np.random.randint(50,100),np.random.randint(330,350),0)\n",
+    "\n",
+    "#d1 = Drone_NSEW(1,75,275,0)\n",
+    "#d2 = Drone_NSEW(1,75,300,0)\n",
+    "#d3 = Drone_NSEW(1,75,325,0)\n",
     "\n",
     "dinits = [[d1.rect.left,d1.rect.top],[d2.rect.left,d2.rect.top],[d3.rect.left,d3.rect.top]]\n",
     "\n",
@@ -1956,12 +1941,13 @@
     "for i in range(50):\n",
     "    y = np.random.randint(50,550)\n",
     "    x = np.random.randint(250,650)\n",
-    "    ydim = np.random.randint(10,30)\n",
-    "    xdim = np.random.randint(10,30)\n",
+    "    ydim = np.random.randint(10,25)\n",
+    "    xdim = np.random.randint(10,25)\n",
     "    obs = Obstacle(x,y,0,xdim,ydim,0)\n",
     "    obstacles.add(obs)\n",
     "    allsprites.add(obs)\n",
     "    oinits.append([obs.rect.left,obs.rect.top])\n",
+    "\n",
     "\n",
     "\n",
     "running = True\n",
@@ -2145,12 +2131,9 @@
     "                    entity.rect.top = currentstate[i][1]\n",
     "\n",
     "\n",
-    "    \n",
     "    screen.fill((0,0,0))\n",
-    "\n",
     "    for entity in allsprites:\n",
-    "        screen.blit(entity.surf, entity.rect)\n",
-    "    \n",
+    "        screen.blit(entity.surf, entity.rect)  \n",
     "    pygame.display.flip()\n",
     "\n",
     "    x = priorityqueue.pop(0)\n",
@@ -2168,7 +2151,7 @@
     "    currentdist = distlist[0]\n",
     "    currentpotential = potlist[0]\n",
     "\n",
-    "    if currentpotential <= 100:\n",
+    "    if currentpotential <= 150:\n",
     "        running=False\n",
     "\n",
     "    #if counter >= 100000:\n",
@@ -2185,14 +2168,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[9476, 9439, 9380, 9321, 9262, 9203, 9144, 9085, 9026, 8967, 8909, 8861, 8820, 8805, 8795, 8525, 7685, 7312, 7033, 7311, 7592, 8175, 8165, 6929, 6904, 6604, 6469, 6449, 5959, 6021, 5900, 5877, 5837, 5797, 5757, 5717, 5677, 5637, 5597, 5562, 5535, 5510, 5486, 5436, 5360, 5306, 5251, 5188, 5169, 5088, 5045, 4998, 4947, 4901, 4863, 4826, 4791, 2897, 2763, 2640, 2082, 1699, 1599, 1323, 1190, 1170, 1130, 1090, 1035, 980, 925, 870, 815, 760, 705, 650, 595, 540, 485, 430, 375, 320, 265, 213, 159, 95, 45, 0]\n"
+      "[4924, 4901, 4842, 4783, 4724, 4665, 4606, 4547, 4488, 4429, 4375, 4337, 4320, 4228, 4200, 4116, 4091, 3937, 3914, 3879, 3835, 3516, 3456, 3391, 3338, 3313, 3258, 3203, 3152, 3116, 3087, 3058, 3033, 2866, 2396, 2382, 2264, 2257, 2219, 2180, 2151, 2122, 2053, 1998, 1958, 1911, 1884, 1865, 1840, 1712, 1672, 1629, 1583, 1532, 1481, 1445, 1409, 1376, 1339, 1247, 1206, 1166, 1134, 1095, 1064, 1036, 1003, 970, 953, 897, 862, 807, 752, 697, 642, 587, 532, 477, 422, 367, 312, 257, 202, 147, 92, 36, 0]\n"
      ]
     }
    ],
@@ -2213,7 +2196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
