continued working on neural network approach

--- a/swarms_with_learning.ipynb
+++ b/swarms_with_learning.ipynb
@@ -1090,6 +1090,148 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "class ImageClassificationBase(nn.Module):\n",
+    "\n",
+    "    def training_step(self, batch):\n",
+    "        images, labels = batch\n",
+    "        out = self(images)\n",
+    "        loss = F.cross_entropy(out, labels)\n",
+    "        return loss\n",
+    "    \n",
+    "    def validation_step(self, batch):\n",
+    "        images, labels = batch\n",
+    "        out = self(images)\n",
+    "        loss = F.cross_entropy(out, labels)\n",
+    "        acc = accuracy(out, labels)\n",
+    "        return {'val_loss': loss.detach(), 'val_acc': acc}\n",
+    "\n",
+    "    def validation_epoch_end(self, outputs):\n",
+    "        batch_losses =  [x['val_loss'] for x in outputs]\n",
+    "        epoch_loss = torch.stack(batch_losses).mean()\n",
+    "        batch_accs = [x['val_acc'] for x in outputs]\n",
+    "        epoch_acc = torch.stack(batch_accs).mean()\n",
+    "        return {'val_loss': epoch_loss.item(), 'val_acc': epoch_acc.item()}\n",
+    "\n",
+    "    def epoch_end(self, epoch, result):\n",
+    "        print(\"Epoch [{}], train_loss: {:.4f}, val_loss: {:.4f}, val_acc: {:.4f}\".format(\n",
+    "            epoch, result['train_loss'], result['val_loss'], result['val_acc']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class UAVStateClassifier(ImageClassificationBase):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.network = nn.Sequential(\n",
+    "\n",
+    "            nn.Conv2d(3, 32, kernel_size=3, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(32,64, kernel_size=3, stride=1, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(2,2),\n",
+    "\n",
+    "            nn.Conv2d(64, 128, kernel_size=3,stride=1,padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(128,128,kernel_size=3,stride=1,padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(2,2),\n",
+    "\n",
+    "            nn.Conv2d(128,256,kernel_size=3,stride=1,padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(256,256,kernel_size=3,stride=1,padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(2,2),\n",
+    "\n",
+    "            nn.Flatten(),\n",
+    "            nn.Linear(82944,1024),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(1024,512),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(512,52)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, xb):\n",
+    "        return self.network(xb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def accuracy(outputs, labels):\n",
+    "    _, preds = torch.max(outputs, dim=1)\n",
+    "    return torch.tensor(torch.sum(preds == labels).item() / len(preds))\n",
+    "\n",
+    "  \n",
+    "@torch.no_grad()\n",
+    "def evaluate(model, val_loader):\n",
+    "    model.eval()\n",
+    "    outputs = [model.validation_step(batch) for batch in val_loader]\n",
+    "    return model.validation_epoch_end(outputs)\n",
+    "\n",
+    "  \n",
+    "def fit(epochs, lr, model, train_loader, val_loader, opt_func = torch.optim.SGD):\n",
+    "    \n",
+    "    history = []\n",
+    "    optimizer = opt_func(model.parameters(),lr)\n",
+    "    for epoch in range(epochs):\n",
+    "        \n",
+    "        model.train()\n",
+    "        train_losses = []\n",
+    "        for batch in train_loader:\n",
+    "            loss = model.training_step(batch)\n",
+    "            train_losses.append(loss)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            optimizer.zero_grad()\n",
+    "            \n",
+    "        result = evaluate(model, val_loader)\n",
+    "        result['train_loss'] = torch.stack(train_losses).mean().item()\n",
+    "        model.epoch_end(epoch, result)\n",
+    "        history.append(result)\n",
+    "    \n",
+    "    return history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [234], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m opt_func \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39moptim\u001b[39m.\u001b[39mAdam\n\u001b[1;32m      3\u001b[0m lr \u001b[39m=\u001b[39m \u001b[39m0.001\u001b[39m\u001b[39m#fitting the model on training data and record the result after each epoch\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m history \u001b[39m=\u001b[39m fit(num_epochs, lr, model, train_dl, val_dl, opt_func)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "num_epochs = 30\n",
+    "opt_func = torch.optim.Adam\n",
+    "lr = 0.001#fitting the model on training data and record the result after each epoch\n",
+    "history = fit(num_epochs, lr, model, train_dl, val_dl, opt_func)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
